syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/wrappers.proto";

// for grpc-gateway
import "google/api/annotations.proto";


package xln.common.proto.service;

message GetLogRequest {

    int64 startTime = 1;
    int64 endTime = 2;
}

message GetLogsResponse {
    int32 result = 1;
}

message GetLogCountResponse {
    int64 count = 1;
}

service RocksLogService{


    rpc GetLogs(GetLogRequest) returns (GetLogsResponse) {
        option (google.api.http) = {
        post: "/v3/kv/put"
        body: "*"
    };
    }

    rpc GetLogCount(GetLogRequest) returns (GetLogCountResponse) {
        option (google.api.http) = {
        post: "/v3/kv/put"
        body: "*"
    };
    }

}
